public/admin-lte/css/app.css
/* ... */
.w.contentNode{
    border-radius: 0;
    padding: 8px;
    text-align: left;
    border: 1px solid #3C8DBC;
    max-width: 200px;
    min-width: 160px;
}
.w.contentNode span i{
    font-size: 20px;
    margin-right: 5px;
}
.w.subTopic{
    border-radius: 24px;
    max-width: 180px;
    min-width: 160px;
    height: auto;
    z-index: 1;
}
.w.contentNode .contentNode-analytics i{
    margin-left: 7px;
    margin-right: 0px;
    font-size: 10px;
}

.center-course{
    background-color: #3C8DBC;
    color:white;
    min-width: 160px;
    border-bottom: 2px solid #3C8DBC;
}

.dropdown-course{
    width:100%;
    font-size:13px;
    border: 1px solid #e3e3e3;
    color:#333;
    margin-top: 1px!important;
}

.dropdown-course li.separator{
    width: 100%;
    margin: 0px;
    height: 4px;
    background: #e1e3e9;
}
.center-category {
    width: 160px !important;
    height: 200px !important;
    display: block;
    background: #3C8DBC;
    color: white;
    font-size: 14px;
    line-height: 1.5;
    text-align: left;
}

.center-category h4 {
    font-size: 20px;
    font-weight: bold;
}

[data-shape=Rectangle] {
    width: auto;
    max-width: 180px;
    min-width: 160px;
    height: auto;
}
[data-shape=Ellipse] {
    max-width: 200px;
    min-width: 120px;
}
.w.subTopic.deleted{
    width: 20px;
    min-width: 20px;
    height:20px;
    min-height:20px;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    border-radius: 50%;
    background-color:#3C8DBC ;
    padding:0px;

    text-indent: 100%;
    white-space: nowrap;
    overflow: hidden;

    z-index:0;
}
.box.box-primary.dropdown-menu {
    width: auto;
    position: absolute;
    box-shadow: 0 0px 10px grey;
    top: 0px;
}

.dropdown-menu.category li {
    padding-left: 14px;
    padding-right: 14px;
    text-transform: capitalize;
    color: #777;
}

ul.dropdown-menu.category,
ul.dropdown-menu.course{
    z-index: 10;
}

.skin-blue .content-header {
    background: white;
    padding: 10px;
    margin-left: 0px;
    z-index: 3;
}

@media (max-width: 991px) {
    .content-header > .breadcrumb {
        background: transparent;
        margin-top: 0px;
    }
}

.dropdown-menu > li > a.btn {
    color: white;
}

.dropdown-menu > li > a.btn:hover {
    background: #2e6da4;
}

.hideSlider {
    visibility: hidden
}

.filter .btn-box-tool {
    box-shadow: none !important;
    color: white;
    font-size: inherit;
    padding-top: 4px;
    cursor: hand;
}

.filter .btn-box-tool:hover {
    color: lightgrey;
}

.filter .label {
    margin-right: 5px;
    white-space: normal;
}

.tree-container {
    left: 0px;
    top: 0px;
    position: absolute;
    overflow: hidden;
    background-color: #ecf0f5;
}

#courseTabs .tree-container{
    left: 80px;
    top:7px;
}

@media (max-width: 991px) {
    #courseTabs .tree-container {
        left: 5px !important;
    }
}

.control {
    position: fixed;
    top: 120px;
    left: 20px;
    z-index: 4;
}

.course-control {
    position: relative;
    left: 20px;
    z-index: 4;
}
.videoPlayerWrapper{
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    background: rgba(0,0,0,0.3);
    z-index: 3000;
}

.videoPlayerWrapper .videoPlayerContainer, .center-height{
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

.content-header > .breadcrumb {
    display: inline;
}

.content-header > .btn {
    display: inline;
}

#courses h4.courses-title {
    margin-top: 17px;
    margin-bottom:20px;
}
.course-search-box{
    position: absolute;
    top: 2px;
    left: 120px;
}
.course-search-icon{
    position: absolute;
    top: 20px;
    left: 100px;
}

a.videoButton{
    position: relative;
    bottom: -50px;
    left: 45%;
    width:100px;
    height:100px;
    background: url(../images/playButton.png) no-repeat;
    display: block;
}
a.videoButton:hover{
    background: url(../images/playButtonHover.png) no-repeat;
}

@media screen and (max-width: 768px) {
    .control {
        top: 155px;
    }
}

.blue {
    background: #3C8DBC !important;
}
.red {
    background: #446CB3 !important;
}

.content-header.red>.breadcrumb>li+li:before{
    color:white;
}

.action-header {
    padding: 7px;
    margin-left: 0px;
    z-index: 3;
    color: white;
    font-size: 12px;
}

.action-header > .breadcrumb > li {
    color: white;
}

.action-header > .breadcrumb > li.home {
    font-weight: bolder;
    text-transform: capitalize;
}

.action-header .navbar-custom-menu {
    margin-right: -10px;
    float: right;
}

.action-header .navbar-custom-menu > ul, .action-header .navbar-custom-menu > ul > li {
    display: inline;
}

.action-header .navbar-custom-menu li a {
    color: #ffffff;
    padding-top: 10px;
    padding-bottom: 11px;
    padding-left: 5px;
    padding-right: 5px;
    font-weight: bold;
}

.action-header li > a:hover {
    background: rgba(0, 0, 0, 0.1);
    color: #f6f6f6;
}

.content-course {
    min-height: 250px;
    margin-right: auto;
    margin-left: auto;
}

.content-course .box {
    margin-bottom: 0px !important;
}

#preview .preview-image {
    width: 100%;
}

.content-course #preview .container {
    top: 0px;
    left: 0px;
    position: absolute;
    padding: 20px;
    background: transparent;
    min-height: 120px;
    width: 100%;
    margin-right: 40px;
}

.content-node #preview .container {
    padding: 20px;
    background: transparent;
    min-height: 120px;
    width: 100%;
    margin-right: 40px;
}

#preview .container .excerpt {
    background: white;
    margin: 5px 20px 20px;
    padding: 20px;
    font-size: 13px;
    -webkit-box-shadow: 0px 0px 26px -4px rgba(0, 0, 0, 0.87);
    -moz-box-shadow: 0px 0px 26px -4px rgba(0, 0, 0, 0.87);
    box-shadow: 0px 0px 26px -4px rgba(0, 0, 0, 0.87);
}

.excerpt .description{
    max-height: 200px;
    overflow: auto;
}

#preview h1 {
    font-size: 27px;
    margin-top: 10px;
}
/* ... */

